# imgprssr

./: Cargo.toml  Containerfile  README.md
.github/workflows/: publish.yml  test.yaml  test.yml
e2e_tests/: package-lock.json  package.json
e2e_tests/tests/: config.js  crop.test.js  resize.test.js
imgprssr_core/: Cargo.toml
imgprssr_core/src/: appconfig.rs  process.rs
src/: appconfig.rs  lib.rs  main.rs  parameters.rs  process.rs  source.rs
